Make advanced search pane more robust by showing it when 'adanced' fields have values rather than trying to push a separate field through the system

--- a/DanceCalc/m4d/Views/Song/Index.cshtml
+++ b/DanceCalc/m4d/Views/Song/Index.cshtml
@@ -250,7 +250,7 @@
 
         @section Scripts {
             @{
-                if (ViewBag.AdvancedSearch == true)
+                if (ViewData.ContainsKey("SongFilter") && ViewBag.SongFilter.Advanced)
                 {
                     <script>var showAdvanced = true</script>
                 }
