Initial routing work

--- a/DanceCalc/m4d/Views/Dance/Index.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Index.cshtml
@@ -1,8 +1,14 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Dance Styles";
 }
 
 @model IEnumerable<m4dModels.SongCounts>
+
+<ol class="breadcrumb">
+    <li><a href="/">Music4Dance</a></li>
+    <li><a href="/Dances">Dances</a></li>
+</ol>
+
 <hgroup>
     <h2>Dances</h2>
 </hgroup>
