--- a/DanceCalc/m4d/Views/Dance/Index.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Index.cshtml
@@ -25,7 +25,7 @@
     }
 </div>
 
-<p class="col-md-12">Choose from the dances above to go to a list of songs that are suitable to dance that dance to.  You may also choose the headers to get a list of dances of a particular type.</p>
+<p class="col-md-12">Choose from the dances styles to get more information or click on the number next to the name to get a list of songs that are suitable to dance that dance to.</p>
 
 @{
     string pageScript = "~/Scripts/showdance.js" + Page.ScriptQualifier;
