Move email to david@music4dance.net to get past issue with custom domain legacy support

--- a/DanceCalc/m4d/Views/Home/About.cshtml
+++ b/DanceCalc/m4d/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 <div class="jumbotron" align="center">
     <img src="~/Content/BlackBanner.png" title="music4dance" class="banner" />
     <h1>What is Music4Dance.Net?</h1>
-    <p class="lead">I'm just starting to spin up this site, so please feel free to email feedback and suggestions to: <a href="mailto:support@music4dance.net">support@music4dance.net</a></p>
+    <p class="lead">I'm just starting to spin up this site, so please feel free to email feedback and suggestions to: <a href="mailto:david@music4dance.net">support@music4dance.net</a></p>
 </div>
 
 <div class="row">
