--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -6,12 +6,12 @@
     <div class="col-md-4">
         <h1 class="music">Music</h1>
         <p class="neutral">Are you learning to partner dance and looking for practice music?  Or are you choreographing a piece and looking for new ideas for music?  Our <a href="/home/dances">dances page</a> is a catalog of music indexed by dance type that will show you a list of songs appropriate for a particular style.  Or go directly to our <a href="/Song">database of songs</a> and browse away.</p>
-        <p class="neutral">Don't see your style of dance here? <a href="mailto:support@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
+        <p class="neutral">Don't see your style of dance here? <a href="mailto:david@music4dance.net">Let us know</a> and we'll be happy to expand our catalog.</p>
     </div>
     <div class="col-md-4">
         <h1 class="tools">Tools</h1>        
         <p class="neutral">Do you have a favorite song (or songs) that you would like to match to a dance style?  Use our <a href="/Home/Counter">dance counter page</a> to help you answer that question.</p>
-        <p class="neutral">We have more useful tools for dancers coming soon.  <a href="mailto:support@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.</p>
+        <p class="neutral">We have more useful tools for dancers coming soon.  <a href="mailto:david@music4dance.net">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.</p>
     </div>
     <div class="col-md-4">
         <h1 class="blog">Info</h1>
