--- a/DanceCalc/m4d/Views/Home/Contact.cshtml
+++ b/DanceCalc/m4d/Views/Home/Contact.cshtml
@@ -9,5 +9,5 @@
 </address>
 
 <address>
-    <strong>Support:</strong><a href="mailto:support@music4dance.net">support@music4dance.net</a><br />
+    <strong>Support:</strong><a href="mailto:david@music4dance.net">support@music4dance.net</a><br />
 </address>
