--- a/DanceCalc/m4d/Views/Dance/Edit.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Edit.cshtml
@@ -17,71 +17,17 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.Description, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div id="alerts"></div>
-                <div class="btn-toolbar" data-role="editor-toolbar" data-target="#editor">
-                    @*<div class="btn-group">
-                        <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font"><i class="icon-font"></i><b class="caret"></b></a>
-                        <ul class="dropdown-menu"></ul>
-                    </div>
-                    <div class="btn-group">
-                        <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="icon-text-height"></i>&nbsp;<b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a data-edit="fontSize"><font size="5">Huge</font></a></li>
-                            <li><a data-edit="fontSize"><font size="3">Normal</font></a></li>
-                            <li><a data-edit="fontSize"><font size="1">Small</font></a></li>
-                        </ul>
-                    </div>*@
-                    <div class="btn-group">
-                        <a class="btn btn-default" data-edit="bold" title="Bold (Ctrl/Cmd+B)"><i class="icon-bold"></i></a>
-                        <a class="btn btn-default" data-edit="italic" title="Italic (Ctrl/Cmd+I)"><i class="icon-italic"></i></a>
-                        <a class="btn btn-default" data-edit="strikethrough" title="Strikethrough"><i class="icon-strikethrough"></i></a>
-                        <a class="btn btn-default" data-edit="underline" title="Underline (Ctrl/Cmd+U)"><i class="icon-underline"></i></a>
-                    </div>
-                    <div class="btn-group">
-                        <a class="btn btn-default" data-edit="insertunorderedlist" title="Bullet list"><i class="icon-list-ul"></i></a>
-                        <a class="btn btn-default" data-edit="insertorderedlist" title="Number list"><i class="icon-list-ol"></i></a>
-                        <a class="btn btn-default" data-edit="outdent" title="Reduce indent (Shift+Tab)"><i class="icon-indent-left"></i></a>
-                        <a class="btn btn-default" data-edit="indent" title="Indent (Tab)"><i class="icon-indent-right"></i></a>
-                    </div>
-                    <div class="btn-group">
-                        <a class="btn btn-default" data-edit="justifyleft" title="Align Left (Ctrl/Cmd+L)"><i class="icon-align-left"></i></a>
-                        <a class="btn btn-default" data-edit="justifycenter" title="Center (Ctrl/Cmd+E)"><i class="icon-align-center"></i></a>
-                        <a class="btn btn-default" data-edit="justifyright" title="Align Right (Ctrl/Cmd+R)"><i class="icon-align-right"></i></a>
-                        <a class="btn btn-default" data-edit="justifyfull" title="Justify (Ctrl/Cmd+J)"><i class="icon-align-justify"></i></a>
-                    </div>
-                    <div class="btn-group">
-                        <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" title="Hyperlink"><i class="icon-link"></i></a>
-                        <div class="dropdown-menu input-append">
-                            <input class="span2" placeholder="URL" type="text" data-edit="createLink" />
-                            <button class="btn" type="button">Add</button>
-                        </div>
-                        <a class="btn  btn-default" data-edit="unlink" title="Remove Hyperlink"><i class="icon-cut"></i></a>
-
-                    </div>
-
-                    @*<div class="btn-group">
-                        <a class="btn" title="Insert picture (or just drag & drop)" id="pictureBtn"><i class="icon-picture"></i></a>
-                        <input type="file" data-role="magic-overlay" data-target="#pictureBtn" data-edit="insertImage" />
-                    </div>*@
-                    <div class="btn-group">
-                        <a class="btn btn-default" data-edit="undo" title="Undo (Ctrl/Cmd+Z)"><i class="icon-undo"></i></a>
-                        <a class="btn btn-default" data-edit="redo" title="Redo (Ctrl/Cmd+Y)"><i class="icon-repeat"></i></a>
-                    </div>
-                </div>
-                <div id="editor" contenteditable="true"></div>
-                <a id="copy" href="#" class="btn btn-default">Copy</a>
-                <a id="paste" href="#" class="btn btn-default">Paste</a>
-                <div>
-                    @Html.TextAreaFor(model => model.Description, new { @id = "description", @class = "form-control text-editor"})
-                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                </div>
+                <div class="mdd_toolbar"></div>
+                <textarea name="Description" cols=50 rows=10 class="mdd_editor">@Model.Description</textarea>
+                <div class="mdd_resizer"></div>
+                <div class="mdd_preview"></div>
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             <table class="table-striped col-md-offset-2 col-md-10">
                 <thead>
                     <tr><td>Description</td><td>Link</td></tr>
@@ -90,7 +36,7 @@
                     <tr data-bind="attr: {id: 'Links_' + $index()}">
                         <td>
                             <div class="editor-field">
-                                <input data-bind="attr: {id: computeLinkId($index(),'Description'), name: computeLinkName($index(),'Description')}, value: Description" type="text" size="80"/>
+                                <input data-bind="attr: {id: computeLinkId($index(),'Description'), name: computeLinkName($index(),'Description')}, value: Description" type="text" size="80" />
                             </div>
                         </td>
                         <td>
@@ -107,13 +53,13 @@
             </table>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             <div class="col-md-offset-2 col-md-10">
                 <a class="btn btn-info" role="button" id="AddLink" data-bind="click: newLink">New Link</a>
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             <div class="col-md-offset-2 col-md-10">
                 <input id="submit" type="submit" value="Save" class="btn btn-default" />
             </div>
@@ -134,14 +80,13 @@
 }
 
 @section Scripts {
-    <link href="https://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
+    <link href="@Url.Content("~/Scripts/mdd_styles.css")" rel="stylesheet" />
     <script>
         var links = @Html.Raw(linksString);
     </script>
     @Scripts.Render("~/bundles/jqueryval")
     <script src="@Url.Content("~/Scripts/knockout-3.2.0.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/knockout.mapping-latest.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery.hotkeys.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/bootstrap-wysiwyg.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/MarkdownDeepLib.min.js")" type="text/javascript"></script>
     <script src="@Url.Content(pageScript)" type="text/javascript"></script>
 }
