--- a/DanceCalc/m4d/Views/Dance/_DanceList.cshtml
+++ b/DanceCalc/m4d/Views/Dance/_DanceList.cshtml
@@ -6,7 +6,28 @@
     {
         <a id="@item.DanceName" href="#" class="list-group-item dance">
             <span id="@item.DanceId" class="badge">@item.SongCount</span>
-            @item.DanceName
+            @if (ViewBag.ShowTempo)
+            {
+                <b>@item.DanceName</b>
+            }
+            else
+            {
+                @item.DanceName
+            }
+            @if (ViewBag.ShowTempo)
+            {
+                decimal min = item.Dance.Info.TempoRange.Min;
+                decimal max = item.Dance.Info.TempoRange.Max;
+                int numerator = item.Dance.Info.Meter.Numerator;
+                if (max == min)
+                {
+                    <small>(@(max * numerator) BPM / @max MPM)</small>
+                }
+                else
+                {
+                    <small>(@(min * numerator)-@(max * numerator) BPM / @min-@max MPM)</small>
+                }
+            }
         </a>
     }
 }
