Hopefully final version of markdown + quicklinks for dance pages

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -99,8 +99,9 @@
         <br />
         <input type="checkbox" name="batch" id="batch" value="true" /> <text>Batch Upload</text>
         <input type="submit" name="reloadDatabase" id="Reload" value="Reload" />
-        <input type="submit" name="reloadDatabase" id="Add" value="Add" />
-        <input type="submit" name="reloadDatabase" id="Update" value="Update" />
+        @*<input type="submit" name="reloadDatabase" id="Add" value="Add" />*@
+        <input type="submit" name="reloadDatabase" id="UpdateSongs" value="Update Songs" />
+        <input type="submit" name="reloadDatabase" id="UpdateDances" value="Update Dances" />
     }
 }
 
